# muffle

./: .gitignore  CHANGELOG.md  LICENSE  fourmolu.yaml  hx.toml  muffle.cabal
app/: Main.hs
generator/: Main.hs
lib/: Muffle.hs
lib/Muffle/: Discord.hs
lib/Muffle/Discord/: Generated.hs
