cabal-version:      3.14
name:               muffle
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Yuto Takano
maintainer:         moa17stock@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        MyLib
        Muffle
        Muffle.Discord
        Muffle.Discord.Generated
        Muffle.Discord.Generated.Schemas
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable muffle
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        muffle

    hs-source-dirs:   app
    default-language: Haskell2010

executable generator
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0
      , aeson ^>=2.3.0.0
      , bytestring ^>=0.12.0.0
      , text ^>=2.1.1
      , pretty-simple ^>=4.1.4.0
      , containers ^>=0.8

    hs-source-dirs:   generator
    default-language: Haskell2010
