cabal-version:      3.14
name:               muffle
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Yuto Takano
maintainer:         moa17stock@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Muffle
        Muffle.Discord
        Muffle.Discord.Generated

        -- BEGIN GENERATED MODULES (run `cabal run generator` to regenerate)
        Muffle.Discord.Generated.Schemas
        Muffle.Discord.Generated.Schemas.AccountResponse
        Muffle.Discord.Generated.Schemas.ActionRowComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.ActionRowComponentForModalRequest
        Muffle.Discord.Generated.Schemas.ActionRowComponentResponse
        Muffle.Discord.Generated.Schemas.ActionTypes
        Muffle.Discord.Generated.Schemas.ActivitiesAttachmentResponse
        Muffle.Discord.Generated.Schemas.ActivityActionTypes
        Muffle.Discord.Generated.Schemas.ActivityInstanceCallbackResponse
        Muffle.Discord.Generated.Schemas.AfkTimeouts
        Muffle.Discord.Generated.Schemas.AllowedMentionTypes
        Muffle.Discord.Generated.Schemas.ApplicationCommandAttachmentOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandAttachmentOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandAutocompleteCallbackRequest
        Muffle.Discord.Generated.Schemas.ApplicationCommandBooleanOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandBooleanOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandChannelOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandChannelOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandCreateRequest
        Muffle.Discord.Generated.Schemas.ApplicationCommandHandler
        Muffle.Discord.Generated.Schemas.ApplicationCommandIntegerOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandIntegerOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandInteractionMetadataResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandMentionableOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandMentionableOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandNumberOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandNumberOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandOptionIntegerChoice
        Muffle.Discord.Generated.Schemas.ApplicationCommandOptionIntegerChoiceResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandOptionNumberChoice
        Muffle.Discord.Generated.Schemas.ApplicationCommandOptionNumberChoiceResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandOptionStringChoice
        Muffle.Discord.Generated.Schemas.ApplicationCommandOptionStringChoiceResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandOptionType
        Muffle.Discord.Generated.Schemas.ApplicationCommandPatchRequestPartial
        Muffle.Discord.Generated.Schemas.ApplicationCommandPermission
        Muffle.Discord.Generated.Schemas.ApplicationCommandPermissionType
        Muffle.Discord.Generated.Schemas.ApplicationCommandResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandRoleOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandRoleOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandStringOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandStringOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandSubcommandGroupOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandSubcommandGroupOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandSubcommandOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandSubcommandOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationCommandType
        Muffle.Discord.Generated.Schemas.ApplicationCommandUpdateRequest
        Muffle.Discord.Generated.Schemas.ApplicationCommandUserOption
        Muffle.Discord.Generated.Schemas.ApplicationCommandUserOptionResponse
        Muffle.Discord.Generated.Schemas.ApplicationEventWebhooksStatus
        Muffle.Discord.Generated.Schemas.ApplicationExplicitContentFilterTypes
        Muffle.Discord.Generated.Schemas.ApplicationFormPartial
        Muffle.Discord.Generated.Schemas.ApplicationIdentityProviderAuthType
        Muffle.Discord.Generated.Schemas.ApplicationIncomingWebhookResponse
        Muffle.Discord.Generated.Schemas.ApplicationIntegrationType
        Muffle.Discord.Generated.Schemas.ApplicationIntegrationTypeConfiguration
        Muffle.Discord.Generated.Schemas.ApplicationIntegrationTypeConfigurationResponse
        Muffle.Discord.Generated.Schemas.ApplicationOAuth2InstallParams
        Muffle.Discord.Generated.Schemas.ApplicationOAuth2InstallParamsResponse
        Muffle.Discord.Generated.Schemas.ApplicationResponse
        Muffle.Discord.Generated.Schemas.ApplicationRoleConnectionsMetadataItemRequest
        Muffle.Discord.Generated.Schemas.ApplicationRoleConnectionsMetadataItemResponse
        Muffle.Discord.Generated.Schemas.ApplicationTypes
        Muffle.Discord.Generated.Schemas.ApplicationUserRoleConnectionResponse
        Muffle.Discord.Generated.Schemas.AttachmentResponse
        Muffle.Discord.Generated.Schemas.AuditLogActionTypes
        Muffle.Discord.Generated.Schemas.AuditLogEntryResponse
        Muffle.Discord.Generated.Schemas.AuditLogObjectChangeResponse
        Muffle.Discord.Generated.Schemas.AuthorType
        Muffle.Discord.Generated.Schemas.AutomodActionType
        Muffle.Discord.Generated.Schemas.AutomodEventType
        Muffle.Discord.Generated.Schemas.AutomodKeywordPresetType
        Muffle.Discord.Generated.Schemas.AutomodTriggerType
        Muffle.Discord.Generated.Schemas.AvailableLocalesEnum
        Muffle.Discord.Generated.Schemas.BanUserFromGuildRequest
        Muffle.Discord.Generated.Schemas.BaseCreateMessageCreateRequest
        Muffle.Discord.Generated.Schemas.BasicApplicationResponseWithBot
        Muffle.Discord.Generated.Schemas.BasicGuildMemberResponse
        Muffle.Discord.Generated.Schemas.BasicMessageResponse
        Muffle.Discord.Generated.Schemas.BlockMessageAction
        Muffle.Discord.Generated.Schemas.BlockMessageActionMetadata
        Muffle.Discord.Generated.Schemas.BlockMessageActionMetadataResponse
        Muffle.Discord.Generated.Schemas.BlockMessageActionResponse
        Muffle.Discord.Generated.Schemas.BotAccountPatchRequest
        Muffle.Discord.Generated.Schemas.BotAddGuildMemberRequest
        Muffle.Discord.Generated.Schemas.BulkBanUsersRequest
        Muffle.Discord.Generated.Schemas.BulkBanUsersResponse
        Muffle.Discord.Generated.Schemas.BulkLobbyMemberRequest
        Muffle.Discord.Generated.Schemas.ButtonComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.ButtonComponentResponse
        Muffle.Discord.Generated.Schemas.ButtonStyleTypes
        Muffle.Discord.Generated.Schemas.ByNWeekday
        Muffle.Discord.Generated.Schemas.ByNWeekdayResponse
        Muffle.Discord.Generated.Schemas.ChannelFollowerResponse
        Muffle.Discord.Generated.Schemas.ChannelFollowerWebhookResponse
        Muffle.Discord.Generated.Schemas.ChannelPermissionOverwriteRequest
        Muffle.Discord.Generated.Schemas.ChannelPermissionOverwriteResponse
        Muffle.Discord.Generated.Schemas.ChannelPermissionOverwrites
        Muffle.Discord.Generated.Schemas.ChannelSelectComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.ChannelSelectComponentForModalRequest
        Muffle.Discord.Generated.Schemas.ChannelSelectComponentResponse
        Muffle.Discord.Generated.Schemas.ChannelSelectDefaultValue
        Muffle.Discord.Generated.Schemas.ChannelSelectDefaultValueResponse
        Muffle.Discord.Generated.Schemas.ChannelTypes
        Muffle.Discord.Generated.Schemas.CheckboxComponentForModalRequest
        Muffle.Discord.Generated.Schemas.CheckboxGroupComponentForModalRequest
        Muffle.Discord.Generated.Schemas.CheckboxGroupOptionForRequest
        Muffle.Discord.Generated.Schemas.CommandPermissionResponse
        Muffle.Discord.Generated.Schemas.CommandPermissionsResponse
        Muffle.Discord.Generated.Schemas.ComponentEmojiForRequest
        Muffle.Discord.Generated.Schemas.ComponentEmojiResponse
        Muffle.Discord.Generated.Schemas.ConnectedAccountGuildResponse
        Muffle.Discord.Generated.Schemas.ConnectedAccountIntegrationResponse
        Muffle.Discord.Generated.Schemas.ConnectedAccountProviders
        Muffle.Discord.Generated.Schemas.ConnectedAccountResponse
        Muffle.Discord.Generated.Schemas.ConnectedAccountVisibility
        Muffle.Discord.Generated.Schemas.ContainerComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.ContainerComponentResponse
        Muffle.Discord.Generated.Schemas.CreateEntitlementRequestData
        Muffle.Discord.Generated.Schemas.CreateForumThreadRequest
        Muffle.Discord.Generated.Schemas.CreateGroupDMInviteRequest
        Muffle.Discord.Generated.Schemas.CreateGuildChannelRequest
        Muffle.Discord.Generated.Schemas.CreateGuildInviteRequest
        Muffle.Discord.Generated.Schemas.CreateMessageInteractionCallbackRequest
        Muffle.Discord.Generated.Schemas.CreateMessageInteractionCallbackResponse
        Muffle.Discord.Generated.Schemas.CreateOrUpdateThreadTagRequest
        Muffle.Discord.Generated.Schemas.CreatePrivateChannelRequest
        Muffle.Discord.Generated.Schemas.CreateRoleRequest
        Muffle.Discord.Generated.Schemas.CreateTextThreadWithMessageRequest
        Muffle.Discord.Generated.Schemas.CreateTextThreadWithoutMessageRequest
        Muffle.Discord.Generated.Schemas.CreatedThreadResponse
        Muffle.Discord.Generated.Schemas.CustomClientThemeResponse
        Muffle.Discord.Generated.Schemas.CustomClientThemeShareRequest
        Muffle.Discord.Generated.Schemas.DefaultKeywordListTriggerMetadata
        Muffle.Discord.Generated.Schemas.DefaultKeywordListTriggerMetadataResponse
        Muffle.Discord.Generated.Schemas.DefaultKeywordListUpsertRequest
        Muffle.Discord.Generated.Schemas.DefaultKeywordListUpsertRequestPartial
        Muffle.Discord.Generated.Schemas.DefaultKeywordRuleResponse
        Muffle.Discord.Generated.Schemas.DefaultReactionEmojiResponse
        Muffle.Discord.Generated.Schemas.DiscordIntegrationResponse
        Muffle.Discord.Generated.Schemas.EmbeddedActivityInstance
        Muffle.Discord.Generated.Schemas.EmbeddedActivityLocationKind
        Muffle.Discord.Generated.Schemas.EmojiResponse
        Muffle.Discord.Generated.Schemas.EntitlementOwnerTypes
        Muffle.Discord.Generated.Schemas.EntitlementResponse
        Muffle.Discord.Generated.Schemas.EntitlementTenantFulfillmentStatusResponse
        Muffle.Discord.Generated.Schemas.EntitlementTypes
        Muffle.Discord.Generated.Schemas.EntityMetadataExternal
        Muffle.Discord.Generated.Schemas.EntityMetadataExternalResponse
        Muffle.Discord.Generated.Schemas.EntityMetadataStageInstance
        Muffle.Discord.Generated.Schemas.EntityMetadataStageInstanceResponse
        Muffle.Discord.Generated.Schemas.EntityMetadataVoice
        Muffle.Discord.Generated.Schemas.EntityMetadataVoiceResponse
        Muffle.Discord.Generated.Schemas.Error
        Muffle.Discord.Generated.Schemas.ErrorDetails
        Muffle.Discord.Generated.Schemas.ErrorResponse
        Muffle.Discord.Generated.Schemas.ExternalConnectionIntegrationResponse
        Muffle.Discord.Generated.Schemas.ExternalScheduledEventCreateRequest
        Muffle.Discord.Generated.Schemas.ExternalScheduledEventPatchRequestPartial
        Muffle.Discord.Generated.Schemas.ExternalScheduledEventResponse
        Muffle.Discord.Generated.Schemas.FileComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.FileComponentResponse
        Muffle.Discord.Generated.Schemas.FileUploadComponentForModalRequest
        Muffle.Discord.Generated.Schemas.FlagToChannelAction
        Muffle.Discord.Generated.Schemas.FlagToChannelActionMetadata
        Muffle.Discord.Generated.Schemas.FlagToChannelActionMetadataResponse
        Muffle.Discord.Generated.Schemas.FlagToChannelActionResponse
        Muffle.Discord.Generated.Schemas.ForumLayout
        Muffle.Discord.Generated.Schemas.ForumTagResponse
        Muffle.Discord.Generated.Schemas.FriendInviteResponse
        Muffle.Discord.Generated.Schemas.GatewayBotResponse
        Muffle.Discord.Generated.Schemas.GatewayBotSessionStartLimitResponse
        Muffle.Discord.Generated.Schemas.GatewayResponse
        Muffle.Discord.Generated.Schemas.GithubAuthor
        Muffle.Discord.Generated.Schemas.GithubCheckApp
        Muffle.Discord.Generated.Schemas.GithubCheckPullRequest
        Muffle.Discord.Generated.Schemas.GithubCheckRun
        Muffle.Discord.Generated.Schemas.GithubCheckRunOutput
        Muffle.Discord.Generated.Schemas.GithubCheckSuite
        Muffle.Discord.Generated.Schemas.GithubComment
        Muffle.Discord.Generated.Schemas.GithubCommit
        Muffle.Discord.Generated.Schemas.GithubDiscussion
        Muffle.Discord.Generated.Schemas.GithubIssue
        Muffle.Discord.Generated.Schemas.GithubRelease
        Muffle.Discord.Generated.Schemas.GithubRepository
        Muffle.Discord.Generated.Schemas.GithubReview
        Muffle.Discord.Generated.Schemas.GithubUser
        Muffle.Discord.Generated.Schemas.GithubWebhook
        Muffle.Discord.Generated.Schemas.GroupDMInviteResponse
        Muffle.Discord.Generated.Schemas.GuildAuditLogResponse
        Muffle.Discord.Generated.Schemas.GuildBanResponse
        Muffle.Discord.Generated.Schemas.GuildChannelLocation
        Muffle.Discord.Generated.Schemas.GuildChannelResponse
        Muffle.Discord.Generated.Schemas.GuildExplicitContentFilterTypes
        Muffle.Discord.Generated.Schemas.GuildFeatures
        Muffle.Discord.Generated.Schemas.GuildHomeSettingsResponse
        Muffle.Discord.Generated.Schemas.GuildIncidentActionsRequest
        Muffle.Discord.Generated.Schemas.GuildIncidentsDataResponse
        Muffle.Discord.Generated.Schemas.GuildIncomingWebhookResponse
        Muffle.Discord.Generated.Schemas.GuildInviteResponse
        Muffle.Discord.Generated.Schemas.GuildJoinRequestApplicationStatus
        Muffle.Discord.Generated.Schemas.GuildJoinRequestResponse
        Muffle.Discord.Generated.Schemas.GuildJoinRequestsListResponse
        Muffle.Discord.Generated.Schemas.GuildMFALevel
        Muffle.Discord.Generated.Schemas.GuildMemberResponse
        Muffle.Discord.Generated.Schemas.GuildMemberVerificationFormFieldType
        Muffle.Discord.Generated.Schemas.GuildNSFWContentLevel
        Muffle.Discord.Generated.Schemas.GuildOnboardingMode
        Muffle.Discord.Generated.Schemas.GuildOnboardingResponse
        Muffle.Discord.Generated.Schemas.GuildPatchRequestPartial
        Muffle.Discord.Generated.Schemas.GuildPreviewResponse
        Muffle.Discord.Generated.Schemas.GuildProductPurchaseResponse
        Muffle.Discord.Generated.Schemas.GuildPruneResponse
        Muffle.Discord.Generated.Schemas.GuildResponse
        Muffle.Discord.Generated.Schemas.GuildRoleColorsResponse
        Muffle.Discord.Generated.Schemas.GuildRoleResponse
        Muffle.Discord.Generated.Schemas.GuildRoleTagsResponse
        Muffle.Discord.Generated.Schemas.GuildScheduledEventEntityTypes
        Muffle.Discord.Generated.Schemas.GuildScheduledEventExceptionCreateRequest
        Muffle.Discord.Generated.Schemas.GuildScheduledEventExceptionPatchRequestPartial
        Muffle.Discord.Generated.Schemas.GuildScheduledEventExceptionResponse
        Muffle.Discord.Generated.Schemas.GuildScheduledEventPrivacyLevels
        Muffle.Discord.Generated.Schemas.GuildScheduledEventStatuses
        Muffle.Discord.Generated.Schemas.GuildScheduledEventUserResponses
        Muffle.Discord.Generated.Schemas.GuildSearchResponse
        Muffle.Discord.Generated.Schemas.GuildStickerResponse
        Muffle.Discord.Generated.Schemas.GuildSubscriptionIntegrationResponse
        Muffle.Discord.Generated.Schemas.GuildTemplateChannelResponse
        Muffle.Discord.Generated.Schemas.GuildTemplateChannelTags
        Muffle.Discord.Generated.Schemas.GuildTemplateResponse
        Muffle.Discord.Generated.Schemas.GuildTemplateRoleColorsResponse
        Muffle.Discord.Generated.Schemas.GuildTemplateRoleResponse
        Muffle.Discord.Generated.Schemas.GuildTemplateSnapshotResponse
        Muffle.Discord.Generated.Schemas.GuildWelcomeChannel
        Muffle.Discord.Generated.Schemas.GuildWelcomeScreenChannelResponse
        Muffle.Discord.Generated.Schemas.GuildWelcomeScreenResponse
        Muffle.Discord.Generated.Schemas.GuildWithCountsResponse
        Muffle.Discord.Generated.Schemas.HasOption
        Muffle.Discord.Generated.Schemas.IncomingWebhookInteractionRequest
        Muffle.Discord.Generated.Schemas.IncomingWebhookRequestPartial
        Muffle.Discord.Generated.Schemas.IncomingWebhookUpdateForInteractionCallbackRequestPartial
        Muffle.Discord.Generated.Schemas.IncomingWebhookUpdateRequestPartial
        Muffle.Discord.Generated.Schemas.InnerErrors
        Muffle.Discord.Generated.Schemas.Int53Type
        Muffle.Discord.Generated.Schemas.IntegrationApplicationResponse
        Muffle.Discord.Generated.Schemas.IntegrationExpireBehaviorTypes
        Muffle.Discord.Generated.Schemas.IntegrationExpireGracePeriodTypes
        Muffle.Discord.Generated.Schemas.IntegrationTypes
        Muffle.Discord.Generated.Schemas.InteractionApplicationCommandAutocompleteCallbackIntegerData
        Muffle.Discord.Generated.Schemas.InteractionApplicationCommandAutocompleteCallbackNumberData
        Muffle.Discord.Generated.Schemas.InteractionApplicationCommandAutocompleteCallbackStringData
        Muffle.Discord.Generated.Schemas.InteractionCallbackResponse
        Muffle.Discord.Generated.Schemas.InteractionCallbackTypes
        Muffle.Discord.Generated.Schemas.InteractionContextType
        Muffle.Discord.Generated.Schemas.InteractionResponse
        Muffle.Discord.Generated.Schemas.InteractionTypes
        Muffle.Discord.Generated.Schemas.InviteApplicationResponse
        Muffle.Discord.Generated.Schemas.InviteChannelRecipientResponse
        Muffle.Discord.Generated.Schemas.InviteChannelResponse
        Muffle.Discord.Generated.Schemas.InviteGuildResponse
        Muffle.Discord.Generated.Schemas.InviteGuildRoleResponse
        Muffle.Discord.Generated.Schemas.InviteTargetTypes
        Muffle.Discord.Generated.Schemas.InviteTypes
        Muffle.Discord.Generated.Schemas.KeywordRuleResponse
        Muffle.Discord.Generated.Schemas.KeywordTriggerMetadata
        Muffle.Discord.Generated.Schemas.KeywordTriggerMetadataResponse
        Muffle.Discord.Generated.Schemas.KeywordUpsertRequest
        Muffle.Discord.Generated.Schemas.KeywordUpsertRequestPartial
        Muffle.Discord.Generated.Schemas.LabelComponentForModalRequest
        Muffle.Discord.Generated.Schemas.LaunchActivityInteractionCallbackRequest
        Muffle.Discord.Generated.Schemas.LaunchActivityInteractionCallbackResponse
        Muffle.Discord.Generated.Schemas.ListApplicationEmojisResponse
        Muffle.Discord.Generated.Schemas.ListGuildSoundboardSoundsResponse
        Muffle.Discord.Generated.Schemas.LobbyGuildInviteResponse
        Muffle.Discord.Generated.Schemas.LobbyMemberRequest
        Muffle.Discord.Generated.Schemas.LobbyMemberResponse
        Muffle.Discord.Generated.Schemas.LobbyMessageResponse
        Muffle.Discord.Generated.Schemas.LobbyResponse
        Muffle.Discord.Generated.Schemas.MLSpamRuleResponse
        Muffle.Discord.Generated.Schemas.MLSpamTriggerMetadata
        Muffle.Discord.Generated.Schemas.MLSpamTriggerMetadataResponse
        Muffle.Discord.Generated.Schemas.MLSpamUpsertRequest
        Muffle.Discord.Generated.Schemas.MLSpamUpsertRequestPartial
        Muffle.Discord.Generated.Schemas.MediaGalleryComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.MediaGalleryComponentResponse
        Muffle.Discord.Generated.Schemas.MediaGalleryItemRequest
        Muffle.Discord.Generated.Schemas.MediaGalleryItemResponse
        Muffle.Discord.Generated.Schemas.MentionSpamRuleResponse
        Muffle.Discord.Generated.Schemas.MentionSpamTriggerMetadata
        Muffle.Discord.Generated.Schemas.MentionSpamTriggerMetadataResponse
        Muffle.Discord.Generated.Schemas.MentionSpamUpsertRequest
        Muffle.Discord.Generated.Schemas.MentionSpamUpsertRequestPartial
        Muffle.Discord.Generated.Schemas.MentionableSelectComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.MentionableSelectComponentForModalRequest
        Muffle.Discord.Generated.Schemas.MentionableSelectComponentResponse
        Muffle.Discord.Generated.Schemas.MessageActivityResponse
        Muffle.Discord.Generated.Schemas.MessageAllowedMentionsRequest
        Muffle.Discord.Generated.Schemas.MessageAttachmentRequest
        Muffle.Discord.Generated.Schemas.MessageAttachmentResponse
        Muffle.Discord.Generated.Schemas.MessageCallResponse
        Muffle.Discord.Generated.Schemas.MessageComponentInteractionMetadataResponse
        Muffle.Discord.Generated.Schemas.MessageComponentSeparatorSpacingSize
        Muffle.Discord.Generated.Schemas.MessageComponentTypes
        Muffle.Discord.Generated.Schemas.MessageCreateRequest
        Muffle.Discord.Generated.Schemas.MessageEditRequestPartial
        Muffle.Discord.Generated.Schemas.MessageEmbedAuthorResponse
        Muffle.Discord.Generated.Schemas.MessageEmbedFieldResponse
        Muffle.Discord.Generated.Schemas.MessageEmbedFooterResponse
        Muffle.Discord.Generated.Schemas.MessageEmbedImageResponse
        Muffle.Discord.Generated.Schemas.MessageEmbedProviderResponse
        Muffle.Discord.Generated.Schemas.MessageEmbedResponse
        Muffle.Discord.Generated.Schemas.MessageEmbedVideoResponse
        Muffle.Discord.Generated.Schemas.MessageInteractionResponse
        Muffle.Discord.Generated.Schemas.MessageMentionChannelResponse
        Muffle.Discord.Generated.Schemas.MessageReactionCountDetailsResponse
        Muffle.Discord.Generated.Schemas.MessageReactionEmojiResponse
        Muffle.Discord.Generated.Schemas.MessageReactionResponse
        Muffle.Discord.Generated.Schemas.MessageReferenceRequest
        Muffle.Discord.Generated.Schemas.MessageReferenceResponse
        Muffle.Discord.Generated.Schemas.MessageReferenceType
        Muffle.Discord.Generated.Schemas.MessageResponse
        Muffle.Discord.Generated.Schemas.MessageRoleSubscriptionDataResponse
        Muffle.Discord.Generated.Schemas.MessageShareCustomUserThemeBaseTheme
        Muffle.Discord.Generated.Schemas.MessageSnapshotResponse
        Muffle.Discord.Generated.Schemas.MessageStickerItemResponse
        Muffle.Discord.Generated.Schemas.MessageType
        Muffle.Discord.Generated.Schemas.MetadataItemTypes
        Muffle.Discord.Generated.Schemas.MinimalContentMessageResponse
        Muffle.Discord.Generated.Schemas.ModalInteractionCallbackRequest
        Muffle.Discord.Generated.Schemas.ModalInteractionCallbackRequestData
        Muffle.Discord.Generated.Schemas.ModalSubmitInteractionMetadataResponse
        Muffle.Discord.Generated.Schemas.MultipleChoiceFormFieldResponse
        Muffle.Discord.Generated.Schemas.MyGuildResponse
        Muffle.Discord.Generated.Schemas.NameplatePalette
        Muffle.Discord.Generated.Schemas.NewMemberActionResponse
        Muffle.Discord.Generated.Schemas.NewMemberActionType
        Muffle.Discord.Generated.Schemas.OAuth2GetAuthorizationResponse
        Muffle.Discord.Generated.Schemas.OAuth2GetKeys
        Muffle.Discord.Generated.Schemas.OAuth2GetOpenIDConnectUserInfoResponse
        Muffle.Discord.Generated.Schemas.OAuth2Key
        Muffle.Discord.Generated.Schemas.OAuth2Scopes
        Muffle.Discord.Generated.Schemas.OnboardingPromptOptionRequest
        Muffle.Discord.Generated.Schemas.OnboardingPromptOptionResponse
        Muffle.Discord.Generated.Schemas.OnboardingPromptResponse
        Muffle.Discord.Generated.Schemas.OnboardingPromptType
        Muffle.Discord.Generated.Schemas.ParagraphFormFieldResponse
        Muffle.Discord.Generated.Schemas.PartialDiscordIntegrationResponse
        Muffle.Discord.Generated.Schemas.PartialExternalConnectionIntegrationResponse
        Muffle.Discord.Generated.Schemas.PartialGuildSubscriptionIntegrationResponse
        Muffle.Discord.Generated.Schemas.PinnedMessageResponse
        Muffle.Discord.Generated.Schemas.PinnedMessagesResponse
        Muffle.Discord.Generated.Schemas.PollAnswerCreateRequest
        Muffle.Discord.Generated.Schemas.PollAnswerDetailsResponse
        Muffle.Discord.Generated.Schemas.PollAnswerResponse
        Muffle.Discord.Generated.Schemas.PollCreateRequest
        Muffle.Discord.Generated.Schemas.PollEmoji
        Muffle.Discord.Generated.Schemas.PollEmojiCreateRequest
        Muffle.Discord.Generated.Schemas.PollLayoutTypes
        Muffle.Discord.Generated.Schemas.PollMedia
        Muffle.Discord.Generated.Schemas.PollMediaCreateRequest
        Muffle.Discord.Generated.Schemas.PollMediaResponse
        Muffle.Discord.Generated.Schemas.PollResponse
        Muffle.Discord.Generated.Schemas.PollResultsEntryResponse
        Muffle.Discord.Generated.Schemas.PollResultsResponse
        Muffle.Discord.Generated.Schemas.PongInteractionCallbackRequest
        Muffle.Discord.Generated.Schemas.PremiumGuildTiers
        Muffle.Discord.Generated.Schemas.PremiumTypes
        Muffle.Discord.Generated.Schemas.PrivateApplicationResponse
        Muffle.Discord.Generated.Schemas.PrivateChannelLocation
        Muffle.Discord.Generated.Schemas.PrivateChannelResponse
        Muffle.Discord.Generated.Schemas.PrivateGroupChannelResponse
        Muffle.Discord.Generated.Schemas.PrivateGuildMemberResponse
        Muffle.Discord.Generated.Schemas.ProvisionalTokenResponse
        Muffle.Discord.Generated.Schemas.PruneGuildRequest
        Muffle.Discord.Generated.Schemas.PurchaseNotificationResponse
        Muffle.Discord.Generated.Schemas.PurchaseType
        Muffle.Discord.Generated.Schemas.QuarantineUserAction
        Muffle.Discord.Generated.Schemas.QuarantineUserActionMetadata
        Muffle.Discord.Generated.Schemas.QuarantineUserActionMetadataResponse
        Muffle.Discord.Generated.Schemas.QuarantineUserActionResponse
        Muffle.Discord.Generated.Schemas.RadioGroupComponentForModalRequest
        Muffle.Discord.Generated.Schemas.RadioGroupOptionForRequest
        Muffle.Discord.Generated.Schemas.RatelimitedResponse
        Muffle.Discord.Generated.Schemas.ReactionTypes
        Muffle.Discord.Generated.Schemas.RecurrenceRule
        Muffle.Discord.Generated.Schemas.RecurrenceRuleFrequencies
        Muffle.Discord.Generated.Schemas.RecurrenceRuleMonths
        Muffle.Discord.Generated.Schemas.RecurrenceRuleResponse
        Muffle.Discord.Generated.Schemas.RecurrenceRuleWeekdays
        Muffle.Discord.Generated.Schemas.ResolvedObjectsResponse
        Muffle.Discord.Generated.Schemas.ResourceChannelResponse
        Muffle.Discord.Generated.Schemas.RichEmbed
        Muffle.Discord.Generated.Schemas.RichEmbedAuthor
        Muffle.Discord.Generated.Schemas.RichEmbedField
        Muffle.Discord.Generated.Schemas.RichEmbedFooter
        Muffle.Discord.Generated.Schemas.RichEmbedImage
        Muffle.Discord.Generated.Schemas.RichEmbedProvider
        Muffle.Discord.Generated.Schemas.RichEmbedThumbnail
        Muffle.Discord.Generated.Schemas.RichEmbedVideo
        Muffle.Discord.Generated.Schemas.RoleColors
        Muffle.Discord.Generated.Schemas.RoleSelectComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.RoleSelectComponentForModalRequest
        Muffle.Discord.Generated.Schemas.RoleSelectComponentResponse
        Muffle.Discord.Generated.Schemas.RoleSelectDefaultValue
        Muffle.Discord.Generated.Schemas.RoleSelectDefaultValueResponse
        Muffle.Discord.Generated.Schemas.SDKMessageRequest
        Muffle.Discord.Generated.Schemas.SKUIneligibilityReason
        Muffle.Discord.Generated.Schemas.ScheduledEventResponse
        Muffle.Discord.Generated.Schemas.ScheduledEventUserCountResponse
        Muffle.Discord.Generated.Schemas.ScheduledEventUserResponse
        Muffle.Discord.Generated.Schemas.SearchIndexNotReadyResponse
        Muffle.Discord.Generated.Schemas.SearchMessageResponse
        Muffle.Discord.Generated.Schemas.SearchableEmbedType
        Muffle.Discord.Generated.Schemas.SectionComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.SectionComponentResponse
        Muffle.Discord.Generated.Schemas.SeparatorComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.SeparatorComponentResponse
        Muffle.Discord.Generated.Schemas.SettingsEmojiResponse
        Muffle.Discord.Generated.Schemas.SlackWebhook
        Muffle.Discord.Generated.Schemas.SnowflakeSelectDefaultValueTypes
        Muffle.Discord.Generated.Schemas.SnowflakeType
        Muffle.Discord.Generated.Schemas.SocialLayerSKUPurchaseEligibilityCallbackData
        Muffle.Discord.Generated.Schemas.SocialLayerSKUPurchaseEligibilityInteractionCallbackRequest
        Muffle.Discord.Generated.Schemas.SortingMode
        Muffle.Discord.Generated.Schemas.SortingOrder
        Muffle.Discord.Generated.Schemas.SoundboardCreateRequest
        Muffle.Discord.Generated.Schemas.SoundboardPatchRequestPartial
        Muffle.Discord.Generated.Schemas.SoundboardSoundResponse
        Muffle.Discord.Generated.Schemas.SoundboardSoundSendRequest
        Muffle.Discord.Generated.Schemas.StageInstanceResponse
        Muffle.Discord.Generated.Schemas.StageInstancesPrivacyLevels
        Muffle.Discord.Generated.Schemas.StageScheduledEventCreateRequest
        Muffle.Discord.Generated.Schemas.StageScheduledEventPatchRequestPartial
        Muffle.Discord.Generated.Schemas.StageScheduledEventResponse
        Muffle.Discord.Generated.Schemas.StandardStickerResponse
        Muffle.Discord.Generated.Schemas.StickerFormatTypes
        Muffle.Discord.Generated.Schemas.StickerPackCollectionResponse
        Muffle.Discord.Generated.Schemas.StickerPackResponse
        Muffle.Discord.Generated.Schemas.StickerTypes
        Muffle.Discord.Generated.Schemas.StringSelectComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.StringSelectComponentForModalRequest
        Muffle.Discord.Generated.Schemas.StringSelectComponentResponse
        Muffle.Discord.Generated.Schemas.StringSelectOptionForRequest
        Muffle.Discord.Generated.Schemas.StringSelectOptionResponse
        Muffle.Discord.Generated.Schemas.SubscriptionResponse
        Muffle.Discord.Generated.Schemas.SubscriptionResponseStatusType
        Muffle.Discord.Generated.Schemas.TargetUsersJobStatusResponse
        Muffle.Discord.Generated.Schemas.TargetUsersJobStatusTypes
        Muffle.Discord.Generated.Schemas.TeamMemberResponse
        Muffle.Discord.Generated.Schemas.TeamMemberRoles
        Muffle.Discord.Generated.Schemas.TeamMembershipStates
        Muffle.Discord.Generated.Schemas.TeamResponse
        Muffle.Discord.Generated.Schemas.TermsFormFieldResponse
        Muffle.Discord.Generated.Schemas.TextDisplayComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.TextDisplayComponentForModalRequest
        Muffle.Discord.Generated.Schemas.TextDisplayComponentResponse
        Muffle.Discord.Generated.Schemas.TextInputComponentForModalRequest
        Muffle.Discord.Generated.Schemas.TextInputComponentResponse
        Muffle.Discord.Generated.Schemas.TextInputFormFieldResponse
        Muffle.Discord.Generated.Schemas.TextInputStyleTypes
        Muffle.Discord.Generated.Schemas.ThreadAutoArchiveDuration
        Muffle.Discord.Generated.Schemas.ThreadMemberResponse
        Muffle.Discord.Generated.Schemas.ThreadMetadataResponse
        Muffle.Discord.Generated.Schemas.ThreadResponse
        Muffle.Discord.Generated.Schemas.ThreadSearchResponse
        Muffle.Discord.Generated.Schemas.ThreadSearchTagSetting
        Muffle.Discord.Generated.Schemas.ThreadSortOrder
        Muffle.Discord.Generated.Schemas.ThreadSortingMode
        Muffle.Discord.Generated.Schemas.ThreadsResponse
        Muffle.Discord.Generated.Schemas.ThumbnailComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.ThumbnailComponentResponse
        Muffle.Discord.Generated.Schemas.TypingIndicatorResponse
        Muffle.Discord.Generated.Schemas.UInt32Type
        Muffle.Discord.Generated.Schemas.UnbanUserFromGuildRequest
        Muffle.Discord.Generated.Schemas.UnfurledMediaRequest
        Muffle.Discord.Generated.Schemas.UnfurledMediaRequestWithAttachmentReferenceRequired
        Muffle.Discord.Generated.Schemas.UnfurledMediaResponse
        Muffle.Discord.Generated.Schemas.UpdateApplicationUserRoleConnectionRequest
        Muffle.Discord.Generated.Schemas.UpdateDMRequestPartial
        Muffle.Discord.Generated.Schemas.UpdateDefaultReactionEmojiRequest
        Muffle.Discord.Generated.Schemas.UpdateGroupDMRequestPartial
        Muffle.Discord.Generated.Schemas.UpdateGuildChannelRequestPartial
        Muffle.Discord.Generated.Schemas.UpdateGuildOnboardingRequest
        Muffle.Discord.Generated.Schemas.UpdateMessageInteractionCallbackRequest
        Muffle.Discord.Generated.Schemas.UpdateMessageInteractionCallbackResponse
        Muffle.Discord.Generated.Schemas.UpdateOnboardingPromptRequest
        Muffle.Discord.Generated.Schemas.UpdateRolePositionsRequest
        Muffle.Discord.Generated.Schemas.UpdateRoleRequestPartial
        Muffle.Discord.Generated.Schemas.UpdateSelfVoiceStateRequestPartial
        Muffle.Discord.Generated.Schemas.UpdateThreadRequestPartial
        Muffle.Discord.Generated.Schemas.UpdateThreadTagRequest
        Muffle.Discord.Generated.Schemas.UpdateVoiceStateRequestPartial
        Muffle.Discord.Generated.Schemas.UserAvatarDecorationResponse
        Muffle.Discord.Generated.Schemas.UserCollectiblesResponse
        Muffle.Discord.Generated.Schemas.UserCommunicationDisabledAction
        Muffle.Discord.Generated.Schemas.UserCommunicationDisabledActionMetadata
        Muffle.Discord.Generated.Schemas.UserCommunicationDisabledActionMetadataResponse
        Muffle.Discord.Generated.Schemas.UserCommunicationDisabledActionResponse
        Muffle.Discord.Generated.Schemas.UserGuildOnboardingResponse
        Muffle.Discord.Generated.Schemas.UserNameplateResponse
        Muffle.Discord.Generated.Schemas.UserNotificationSettings
        Muffle.Discord.Generated.Schemas.UserPIIResponse
        Muffle.Discord.Generated.Schemas.UserPrimaryGuildResponse
        Muffle.Discord.Generated.Schemas.UserProfileMetadata
        Muffle.Discord.Generated.Schemas.UserProfileMetadataResponse
        Muffle.Discord.Generated.Schemas.UserProfileRuleResponse
        Muffle.Discord.Generated.Schemas.UserProfileUpsertRequest
        Muffle.Discord.Generated.Schemas.UserProfileUpsertRequestPartial
        Muffle.Discord.Generated.Schemas.UserResponse
        Muffle.Discord.Generated.Schemas.UserSelectComponentForMessageRequest
        Muffle.Discord.Generated.Schemas.UserSelectComponentForModalRequest
        Muffle.Discord.Generated.Schemas.UserSelectComponentResponse
        Muffle.Discord.Generated.Schemas.UserSelectDefaultValue
        Muffle.Discord.Generated.Schemas.UserSelectDefaultValueResponse
        Muffle.Discord.Generated.Schemas.VanityURLErrorResponse
        Muffle.Discord.Generated.Schemas.VanityURLResponse
        Muffle.Discord.Generated.Schemas.VerificationLevels
        Muffle.Discord.Generated.Schemas.VideoQualityModes
        Muffle.Discord.Generated.Schemas.VoiceRegionResponse
        Muffle.Discord.Generated.Schemas.VoiceScheduledEventCreateRequest
        Muffle.Discord.Generated.Schemas.VoiceScheduledEventPatchRequestPartial
        Muffle.Discord.Generated.Schemas.VoiceScheduledEventResponse
        Muffle.Discord.Generated.Schemas.VoiceStateResponse
        Muffle.Discord.Generated.Schemas.WebhookSlackEmbed
        Muffle.Discord.Generated.Schemas.WebhookSlackEmbedField
        Muffle.Discord.Generated.Schemas.WebhookSourceChannelResponse
        Muffle.Discord.Generated.Schemas.WebhookSourceGuildResponse
        Muffle.Discord.Generated.Schemas.WebhookTypes
        Muffle.Discord.Generated.Schemas.WelcomeMessageResponse
        Muffle.Discord.Generated.Schemas.WelcomeScreenPatchRequestPartial
        Muffle.Discord.Generated.Schemas.WidgetActivity
        Muffle.Discord.Generated.Schemas.WidgetChannel
        Muffle.Discord.Generated.Schemas.WidgetImageStyles
        Muffle.Discord.Generated.Schemas.WidgetMember
        Muffle.Discord.Generated.Schemas.WidgetResponse
        Muffle.Discord.Generated.Schemas.WidgetSettingsResponse
        Muffle.Discord.Generated.Schemas.WidgetUserDiscriminator
        -- END GENERATED MODULES
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable muffle
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        muffle

    hs-source-dirs:   app
    default-language: Haskell2010

executable generator
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0
      , aeson ^>=2.3.0.0
      , bytestring ^>=0.12.0.0
      , text ^>=2.1.1
      , pretty-simple ^>=4.1.4.0
      , containers ^>=0.8
      , directory ^>=1.3.11.0

    hs-source-dirs:   generator
    default-language: Haskell2010
